Travis Build script fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 cache:
   directories:
   - "node_modules"
-script: npm build
+script: npm run build
 deploy:
   provider: pages
   skip-cleanup: true
