Travis Dev & Live Seperation

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,27 @@ node_js:
 cache:
   directories:
   - "node_modules"
+branches:
+  only:
+  -master
+  -develop
 script: npm run build
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  keep-history: true
-  local-dir: dist
-  repo: SLIOI/slioi.github.io
-  target-branch: master
-  verbose: true
-  on:
-    branch: master
+  - provider: pages
+    skip-cleanup: true
+    github-token: $GITHUB_TOKEN
+    keep-history: true
+    local-dir: dist
+    repo: SLIOI/slioi.github.io
+    target-branch: master
+    verbose: true
+    on:
+      branch: master
+  - provider: pages
+    skip-cleanup: true
+    github-token: $GITHUB_TOKEN
+    keep-history: true
+    local-dir: dist
+    verbose: true
+    on:
+      branch: develop
