--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: node_js
 node_js:
-  - "lts/*"
+- "lts/*"
 cache:
   directories:
   - "node_modules"
+branches:
+  only:
+  - master
+  - develop
 script: npm run build
 deploy:
-  provider: pages
+- provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
@@ -15,4 +19,14 @@ deploy:
   target-branch: master
   verbose: true
   on:
+    repo: SLIOI/website
     branch: master
+- provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  local-dir: dist
+  verbose: true
+  on:
+    repo: SLIOI/website
+    branch: develop
