--- a/package.json
+++ b/package.json
@@ -52,5 +52,10 @@
     "typescript": "^3.0.3",
     "webpack": "^3.12.0",
     "webpack-dev-server": "^2.11.3"
+  },
+  "dependencies": {
+    "@types/jquery": "^3.3.22",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1"
   }
 }
