--- a/package.json
+++ b/package.json
@@ -54,8 +54,13 @@
     "webpack-dev-server": "^2.11.3"
   },
   "dependencies": {
+    "@types/bootstrap": "^4.1.2",
+    "@types/gsap": "^1.20.0",
     "@types/jquery": "^3.3.22",
+    "@types/webpack": "^4.4.17",
     "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1"
+    "gsap": "^2.0.2",
+    "jquery": "^3.3.1",
+    "smooth-scroll": "^14.2.1"
   }
 }
