--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ branches:
   - master
   - develop
 script:
-- if [ "$TRAVIS_BRANCH" != "master" ]; then npm run build:dev
-- if [ "$TRAVIS_BRANCH" = "master" ]; then npm run build:prod
+- if [ "$TRAVIS_BRANCH" == "master" ]; then npm run build:prod; else npm run build:dev; fi
 deploy:
 - provider: pages
   skip-cleanup: true
