--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: node_js
 node_js:
 - "lts/*"
-cache:
-  directories:
-  - "node_modules"
 branches:
   only:
   - master
   - develop
-script: npm run build
+script:
+- if [ "$TRAVIS_BRANCH" == "master" ]; then npm run build:prod; else npm run build:dev; fi
 deploy:
 - provider: pages
   skip-cleanup: true
