--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "slioi-website",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "The Official Website of Sri Lankan Olympiad in Informatics",
   "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \\\"Error: no test specified\\\" && exit 1",
-    "start": "webpack-dev-server",
-    "build": "npm run clean; webpack",
+    "start": "webpack-dev-server --inline --hot --env dev",
+    "build:dev": "npm run clean; webpack --env dev --progress --profile --colors",
+    "build:prod": "npm run clean; webpack --env prod --progress --profile --colors",
     "clean": "rm -rf dist"
   },
   "repository": {
@@ -21,7 +22,10 @@
   ],
   "author": "SLIOI",
   "maintainers": [
-    "Adithya Narasinghe"
+    "Adithya Narasinghe",
+    "Pasindu Wijesena",
+    "NishanWijethunga",
+    "Ravindu Ramesh"
   ],
   "license": "GPL-3.0",
   "bugs": {
@@ -29,10 +33,11 @@
   },
   "homepage": "https://github.com/SLIOI/website#readme",
   "devDependencies": {
-    "@material/button": "^0.39.3",
-    "@material/layout-grid": "^0.39.0",
+    "@material/button": "^0.41.0",
     "@material/ripple": "^0.39.3",
     "@material/typography": "^0.39.0",
+    "@material/card": "^0.41.0",
+    "@material/elevation": "^0.41.0",
     "@types/material-components-web": "^0.35.0",
     "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.3",
@@ -51,6 +56,14 @@
     "ts-loader": "^3.3.1",
     "typescript": "^3.0.3",
     "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.3"
+    "webpack-dev-server": "^2.11.3",
+    "@types/webpack": "^4.4.17",
+    "@types/gsap": "^1.20.0",
+    "@types/jquery": "^3.3.22"
+  },
+  "dependencies": {
+    "gsap": "^2.0.2",
+    "jquery": "^3.3.1",
+    "smooth-scroll": "^14.2.1"
   }
 }
